syntax = "proto3";

import "google/protobuf/empty.proto";

package Lykke.Service.BlockchainRiskControl;

service BlockchainRiskControlService {
    rpc GetOperationsToResolve (google.protobuf.Empty) returns (OperationsResponse) {}
    rpc AcceptOperation (OperationIdRequest) returns (google.protobuf.Empty) {}
    rpc RejectOperation (OperationIdRequest) returns (google.protobuf.Empty) {}
}

message OperationIdRequest {
    string id = 1;
}

message OperationsResponse {
    repeated RiskOperation operations = 1;
}

message RiskOperation {
    string id = 1;
    Risk risk = 2;
    string clientId = 3;
    string type = 4;
    string blockchainType = 5;
    string assetId = 6;
    string fromAddress = 7;
    string toAddress = 8;
    string amount = 9;
}

message Risk {
    string violations = 1;
    string level = 2;
}
